syntax = "proto3";
package management;

message RemoveRoleRequest {
	 string id = 1;
	 string tenant_id = 2;
}

message RemoveRoleResponse {}
